# martapi

./: compose.yaml  gateway-startup.sh  readme.md
UserService/: Dockerfile.dev  pyproject.toml
UserService/app/: initial_data.py  main.py  setting.py  utiles.py
UserService/app/api/: deps.py
UserService/app/api/v1/: api.py
UserService/app/api/v1/routes/: login.py  user.py
UserService/app/consumer/: notification_consumer.py
UserService/app/core/: db_eng.py  security.py
UserService/app/crud/: user_crud.py
UserService/app/model/: user_model.py
inventory/: Dockerfile.dev  pyproject.toml
inventory/app/: main.py  settings.py
inventory/app/api/: deps.py
inventory/app/api/routes/: api.py
inventory/app/api/routes/v1/: inventory.py
inventory/app/consumer/: order_consummer.py  product_consumer.py
inventory/app/core/: db_eng.py  deps.py  requests.py
inventory/app/crud/: inventory_crud.py
inventory/app/model/: inventory_model.py
notification/: Dockerfile.dev  pyproject.toml
notification/app/: main.py  model.py  send_mail.py  send_notification.py  setting.py
notification/app/consumer/: get_user.py  order_consumer.py  user_consumer.py  user_register.py
notification/app/core/: db_eng.py  requests.py
notification/app/model/: model.py
order/: Dockerfile.dev  pyproject.toml
order/app/: main.py  setting.py  stock.proto
order/app/api/: dep.py
order/app/api/v1/: api.py
order/app/api/v1/routes/: order.py  order_admin.py
order/app/consumer/: payment.py
order/app/core/: dep_kafka.py  requests.py
order/app/crud/: order_crud.py
order/app/models/: order_model.py
payment/: Dockerfile.dev  pyproject.toml
payment/app/: main.py  setting.py
payment/public/: checkout.html  success.html
product/: Dockerfile.dev  pyproject.toml
product/app/: dump_dp.py  main.py  settings.py  stock_pb2.py
product/app/api/: dep.py
product/app/api/v1/: api.py
product/app/api/v1/routes/: product.py  product_admin.py
product/app/crud/: product_crud.py
product/app/models/: productModel.py
product/app/producer/: stock_producer.py
