[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Muneeb Hassan  <muneebxhasan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notificationapi-python-server-sdk = "^1.1.0"
aiokafka = "^0.11.0"
fastapi = "^0.111.1"
sqlmodel = "^0.0.19"
psycopg = "^3.2.1"
requests = "^2.32.3"
kafka = "^1.3.5"
fastapi-mail = "^1.4.1"
emails = "^0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
