[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Muneeb Hassan  <muneebxhasan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
psycopg = "^3.2.1"
protobuf = "^5.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
