[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Muneeb Hassan  <muneebxhasan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
stripe = "^10.4.0"
fastapi = "^0.111.1"
aiokafka = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
